# GUTS

./: .dockerignore  .gitignore  .railwayignore  .vercelignore  BACKEND_COMPARISON.md  BUILD_INSTRUCTIONS.md  CPP_MIGRATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_BUILDKIT.md  EMOTES_README.md  GAME_RULES.md  MIGRATION_COMPLETE.md  PRODUCTION_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_DEPLOY.md  RAILWAY.md  RAILWAY_BUILD_ARGS.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  README.md  START_HERE.md  TESTING.md  package-lock.json  package.json  railway.json  setup.bat  setup.sh  start.sh
backend/: gameLogic.js  gameManager.js  package.json  server.js
backend_cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  RAILWAY_DEPLOY.md  README.md  nixpacks.toml
backend_cpp/include/: Card.hpp  Game.hpp  GameLogic.hpp  GameManager.hpp  Player.hpp
backend_cpp/src/: GameLogic.cpp  GameManager.cpp  server.cpp
frontend/: Dockerfile  index.html  nixpacks.toml  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BuyBackModal.jsx  Card.jsx  DeckShowdown.jsx  EmotePicker.jsx  GameEnd.jsx  GameRoom.jsx  LandingPage.jsx  Lobby.jsx  Notification.jsx  PlayerList.jsx  RevealScreen.jsx  Timer.jsx
frontend/src/store/: gameStore.js
scripts/: compress-emotes.js
